# synchronized_value

./: CMakeLists.txt  LICENSE  README.md  synchronized_value.h  synchronized_value_test.cpp
.github/workflows/: cmake-multi-platform.yml
